# web-render-rs

./: Cargo.toml  LICENSE  README.md
examples/web-test/: Cargo.toml  index.html  styles.css
examples/web-test/src/: frag_shader.glsl  lib.rs  vert_shader.glsl
src/: lib.rs
