[package]
name = "web-render-rs"
version = "0.1.0"
description = "library for rendering using webgl"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
js-sys = "0.3.51"
wasm-bindgen = "0.2.87"
game-loop = "1.0.0"

[dependencies.web-sys]
version = "0.3.64"
features = [
  'HtmlCanvasElement',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'ResizeObserver',
  'EventTarget',
  'Event',
]
