[package]
name = "web-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
web-render-rs = { path = "../../../web-render-rs" }
console_error_panic_hook = "0.1.7"
js-sys = "0.3.51"
wasm-bindgen = "0.2.87"

[dependencies.web-sys]
version = "0.3.64"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
  'Event',
  'KeyboardEvent',
  'MouseEvent',
  'console',
]
